--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -6,6 +6,7 @@
     border-radius: 5px;
     background-color: #f7f7f7;
     margin-top: 20vh;
+    margin-bottom: 12vh;
   }
   
   h2 {
@@ -58,3 +59,6 @@
     background-color: #c5372b;
   }
   
+  .incorrect-password {
+    border-color: red;
+  }
