--- a/src/components/Scenes/styles/asylum.css
+++ b/src/components/Scenes/styles/asylum.css
@@ -35,7 +35,7 @@
   .asylum-list {
     list-style-type: decimal;
     margin-left: 20px;
-    padding-left: 20px;
+    padding-left: 20px;;
   }
 
   ol {
