--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,8 @@
 
 body {
   height: 100vh;
-  background-color: #050355;
+  background-color: #212121;
+  background-image: linear-gradient(0deg, #616161 .1px, transparent 1px);
+  background-size: 100% 60px;
+  background-position: 0 0;
 }
