--- a/src/components/common/footer.css
+++ b/src/components/common/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #f2f2f2;
+  background-color: #424242;
   bottom: 0;
   left: 0;
   max-width: 100%;
@@ -13,6 +13,7 @@
   justify-content: space-between;
   align-items: center;
   height: 100%;
+  color: #fff;
 }
 
 .footer-bottom {
@@ -20,6 +21,7 @@
   text-align: center;
   font-size: 14px;
   opacity: 0.8;
+  color: #fff;
 }
 
 .company-section,
