--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 }
 
 body {
-  height: 100vh;
+  /* height: 120vh; */
+  position: relative;
   background-color: #212121;
   background-image: linear-gradient(0deg, #616161 .1px, transparent 1px);
   background-size: 100% 60px;
