--- a/src/components/common/footer.css
+++ b/src/components/common/footer.css
@@ -2,8 +2,10 @@
   background-color: #424242;
   bottom: 0;
   left: 0;
-  max-width: 100%;
+  width: 100%;
   margin-top: 20px;
+  margin-top: 45px;
+  position: relative;
 }
 
 .footer-content {
