--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,17 @@
 }
 
 body {
-  /* height: 120vh; */
+  height: 100vh;
   position: relative;
   background-color: #212121;
   background-image: linear-gradient(0deg, #616161 .1px, transparent 1px);
   background-size: 100% 60px;
   background-position: 0 0;
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
