--- a/src/components/Landing/landingscreen.css
+++ b/src/components/Landing/landingscreen.css
@@ -5,10 +5,23 @@
   background-color: #f2f2f2;
   border-radius: 8px;
   padding: 20px;
-  max-width: 600px;
+  width: 800px;
   margin: auto;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-top: 2vh;
+}
+
+.status-change-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.status-change-title {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
 .welcome-title {
