--- a/src/components/Scenes/styles/changeofStatus.css
+++ b/src/components/Scenes/styles/changeofStatus.css
@@ -12,7 +12,7 @@
   }
   
   .section-container {
-    width: 450px; /* Adjust the width as needed */
+    width: 450px;
     margin-bottom: 30px;
     padding: 20px;
     border: 1px solid #ccc;
