--- a/src/components/Scenes/styles/petition.css
+++ b/src/components/Scenes/styles/petition.css
@@ -4,6 +4,20 @@
     align-items: center;
     justify-content: space-evenly;
   }
+
+  .petitionCard-container {
+    width: 400px;
+    height: 350px;
+    display: "flex";
+    justify-content: "center";
+    padding: 20px;
+    text-align: center;
+    background-color: #f2f2f2;    
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-top: 11vh;
+    margin-bottom: 11vh;
+  }
   
   .petition-title {
     font-size: 24px;
