--- a/src/components/Scenes/styles/visaCenter.css
+++ b/src/components/Scenes/styles/visaCenter.css
@@ -3,13 +3,16 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    margin-top: 20vh;
+    margin-bottom: 20vh;
   }
   
   .vc-title {
+    display: flex;
+    justify-content: center;
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
-    text-align: center;
   }
   
   .vc-section-container {
