--- a/src/components/Landing/landingscreen.css
+++ b/src/components/Landing/landingscreen.css
@@ -4,11 +4,11 @@
   grid-gap: 20px;
   background-color: #f2f2f2;
   border-radius: 8px;
-  padding: 20px;
   width: 800px;
   margin: auto;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-top: 2vh;
+  margin-top: 10vh;
+  margin-bottom: 15vh;
 }
 
 .status-change-container {
