arranged each list from each of the files. Original Docs now display on the initial screens and necessary document types now need to be shown from clicking list

--- a/src/components/Scenes/styles/asylum.css
+++ b/src/components/Scenes/styles/asylum.css
@@ -6,8 +6,7 @@
   }
   
   .asylum-container {
-    width: 600px;
-    height: 300px;
+    max-width: 900px;
     margin: auto;
     padding: 20px;
     text-align: center;
