--- a/src/components/Scenes/styles/tps.css
+++ b/src/components/Scenes/styles/tps.css
@@ -1,7 +1,8 @@
 .tps-wrapper {
-    display: flex;
-    justify-content: space-evenly;
-    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
   }
   
   .tps-container {
@@ -11,10 +12,6 @@
     text-align: center;
     background-color: #f2f2f2;
     border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 350px; /* Adjust the height as needed */
     margin-top: 5vh;
     margin-bottom: 5vh;
   }
