--- a/src/components/Questionnaires/portal/questionnaire.css
+++ b/src/components/Questionnaires/portal/questionnaire.css
@@ -1,6 +1,6 @@
 .questionnaire {
-    width: 600px;
-    height: 500px;
+    max-width: 700px;
+    height: 570px;
     margin: 0 auto;
     padding: 20px;
     text-align: center;
@@ -11,7 +11,6 @@
     margin-bottom: 50px;
   }
 
-
   .final-results {
     display: flex;
     justify-content: center;
@@ -20,9 +19,9 @@
   .questionnaire-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 60px;
   }
   
   .heading {
@@ -34,7 +33,7 @@
   .question {
     font-size: 28px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
   
   .options {
@@ -78,7 +77,6 @@
     margin-top: 100px;
   }
   
-  
   .back-button:hover {
     background-color: #0056b3;
   }
@@ -94,7 +92,8 @@
   }
   
   .result-list {
-    margin-top: 10px; /* Add some top margin for spacing */
+    margin-top: 30px;
+    margin-bottom: 20px;
   }
   
   .result-list li {
@@ -119,3 +118,8 @@
     margin-bottom: 5px;
   }
   
+  .start-over-container {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 20vh;
+  }
