--- a/src/components/Questionnaires/portal/questionnaire.css
+++ b/src/components/Questionnaires/portal/questionnaire.css
@@ -120,6 +120,12 @@
   
   .start-over-container {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     margin-top: 20vh;
+    padding: 20px;
+  }
+
+  .start-over-button {
+    height: 50px;
+    max-width: 90px;
   }
