--- a/src/App.css
+++ b/src/App.css
@@ -3,17 +3,15 @@
 }
 
 body {
-  height: 100vh;
+  height: 100%;
   position: relative;
   background-color: #212121;
-  background-image: linear-gradient(0deg, #616161 .1px, transparent 1px);
+  background-image: linear-gradient(0deg, #616161 0.1px, transparent 1px);
   background-size: 100% 60px;
   background-position: 0 0;
 }
 
-footer {
-  position: relative;
-  left: 0;
-  bottom: 0;
-  width: 100%;
+.content-container {
+  min-height: 91.2vh;
+  padding-bottom: 1px;
 }
