--- a/src/components/Scenes/styles/greenCardRenewal.css
+++ b/src/components/Scenes/styles/greenCardRenewal.css
@@ -1,4 +1,4 @@
-.citizenshipCard-container {
+.renewalCard-container {
     max-width: 900px;
     display: "flex";
     justify-content: "center";
@@ -8,11 +8,11 @@
     background-color: #f2f2f2;    
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-top: 30px;
+    margin-top: 35px;
     margin-bottom: 20vh;
 }
 
-.citizenshipCard-container h2 {
+.renewalCard-container h2 {
     font-size: 18px;
     font-weight: bold;
     margin-bottom: 10px;
