--- a/src/components/Scenes/styles/travel.css
+++ b/src/components/Scenes/styles/travel.css
@@ -1,10 +1,10 @@
-.asylum-title {
+.travel-title {
     font-size: 24px;
     font-weight: bold;
     text-align: center;
   }
   
-  .asylum-container {
+  .travel-container {
     max-width: 900px;
     margin: auto;
     padding: 20px;
@@ -12,7 +12,7 @@
     background-color: #f2f2f2;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-top: 20vh;
+    margin-top: 25vh;
   }
   
   
