--- a/src/components/Scenes/styles/visaCenter.css
+++ b/src/components/Scenes/styles/visaCenter.css
@@ -3,8 +3,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    margin-top: 3vh;
   }
   
   .vc-title {
@@ -17,13 +16,12 @@
   
   .vc-section-container {
     width: calc(50% - 20px);
-    margin-bottom: 30px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
     background-color: #f2f2f2;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
+    margin-top: 15px;
+    margin-bottom: 20vh;
   }
   
   .vc-section-container h2 {
@@ -40,7 +38,7 @@
   
   .vc-section-container li {
     font-size: 16px;
-    margin-bottom: 8px;
+    margin-bottom: 10px;
   }
   
   .ol {
