--- a/src/components/common/footer.css
+++ b/src/components/common/footer.css
@@ -1,12 +1,8 @@
 .footer {
   background-color: #424242;
   bottom: 0;
-  left: 0;
-  top: 0;
   width: 100%;
-  margin-top: 20px;
-  margin-top: 45px;
-  position: relative;
+  position: absolute;
 }
 
 .footer-content {
